Final Project commit

--- a/research/04_mlflow_tracking.ipynb
+++ b/research/04_mlflow_tracking.ipynb
@@ -279,6 +279,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/niralpatel/Desktop/Projects/speaking_silence/env/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.utils import to_categorical\n",
+    "\n",
+    "# Assuming yTrain is your original labels\n",
+    "yTrain = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]\n",
+    "\n",
+    "# One-hot encode the labels\n",
+    "one_hot_yTrain = to_categorical(yTrain, num_classes=15)\n",
+    "\n",
+    "# Create a mapping from integer labels to one-hot encoded vectors\n",
+    "label_to_one_hot = {label: one_hot for label, one_hot in zip(yTrain, one_hot_yTrain)}\n",
+    "\n",
+    "# Example usage\n",
+    "print(label_to_one_hot[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
